# crysl

./: CITATION.cff  QOMN_LANGUAGE_SPEC.md  README.md  install.sh  paper.bib  paper.md
compiler/: Cargo.toml
compiler/src/: bytecode.rs  crystal_compiler.rs  intent_parser.rs  jit.rs  main.rs  repl.rs  runtime.rs  vm.rs
demo/papers/: 01_main_paper.md  02_forum_posts.md  03_api_docs.md  04_investment_brief.md  papers_index.html
docs/: QOMNI_PAPER.md  VERIFICATION.md
docs/outreach/: amazon.md  google.md  meta.md
paper/: main.tex  paper.md  refs.bib
src/: Cargo.toml  aot_plan.rs  backend_cpu.rs  batch_plan.rs  benchmark_proofs.rs  bytecode.rs  bytecode_vm.rs  cognitive_memory.rs  intent_parser.rs  jit.rs  lexer.rs  lib.rs  llvm_backend.rs  main.rs  plan.rs  plan_v2.rs  runtime.rs  server.rs  simulation_engine.rs  units.rs  wasm_backend.rs
tests/: adversarial.rs  all_56_plans.rs  golden.rs  repeatability.rs  slo_latency.rs
